--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,20 @@
   background: black;
   display: flex;
   align-items: center;
-  /* justify-content: center; */
   flex-direction: column;
   justify-content: space-evenly;
+}
+
+html {
+  height: -webkit-fill-available;
 }
 
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  height: 100vh;
+  height: -webkit-fill-available;
+  padding: 0 2rem;
+  background: black;
 }
