--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,27 +1,34 @@
 .header {
-  height: 100px;
+  height: 50px;
   position: fixed;
   top: 0;
-  width: 90%;
+  width: 100%;
   z-index: 100;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 2rem 2rem;
-  background-color: black;
+  background: rgb(0, 0, 0);
+  /* box-shadow: 0 0 5px 0 rgba(177, 176, 176, 0.671); */
 }
 
 .header img {
-  height: 80%;
+  height: 100%;
   justify-self: flex-start;
+  padding-left: 3rem;
 }
 
 @media screen and (max-width: 768px) {
-  .header {
+  /* .header {
     flex-direction: column;
+  } */
+
+  .header {
+    gap: 1rem;
   }
 
   .header img {
-    height: 50%;
+    height: 90%;
+    padding-left: 2rem;
   }
 }
