--- a/src/components/pedals/pedal.css
+++ b/src/components/pedals/pedal.css
@@ -18,6 +18,7 @@
 
 .volume-pedal {
   background: rgb(32, 83, 58);
+  width: calc(15.625rem / 1.2) !important;
 }
 
 .volume-pedal .pedal-stomp {
@@ -33,8 +34,8 @@
 }
 
 .pedal {
-  width: 250px;
-  height: 350px;
+  width: 15.625rem;
+  height: 21.875rem;
   border-radius: 10px;
   display: flex;
   align-items: center;
