--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,34 +1,36 @@
 .header {
   height: 50px;
-  position: fixed;
-  top: 0;
   width: 100%;
   z-index: 100;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 2rem 2rem;
-  background: rgb(0, 0, 0);
-  /* box-shadow: 0 0 5px 0 rgba(177, 176, 176, 0.671); */
+
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .header img {
   height: 100%;
   justify-self: flex-start;
-  padding-left: 3rem;
+}
+
+.coffee-button {
+  background-image: url("./cofee.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: max-content;
+  height: 35px;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
-  /* .header {
-    flex-direction: column;
-  } */
-
   .header {
-    gap: 1rem;
+    justify-content: space-between;
+    padding: 0 1rem;
   }
 
   .header img {
     height: 90%;
-    padding-left: 2rem;
+    /* padding-left: 2rem; */
   }
 }
