--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,14 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: space-evenly;
+  background: rgb(19, 17, 28);
+  background: linear-gradient(
+    24deg,
+    rgba(19, 17, 28, 1) 62%,
+    rgba(44, 18, 40, 1) 100%
+  );
+  padding: 0;
+  margin: 0;
 }
 
 html {
@@ -18,6 +25,13 @@ body {
   box-sizing: border-box;
   height: 100vh;
   height: -webkit-fill-available;
-  padding: 0 2rem;
+  /* padding: 0 2rem; */
   background: black;
+}
+
+.header-buffer {
+  padding: 1rem;
+  height: 50px;
+  width: 100%;
+  background-color: transparent;
 }
