--- a/src/components/pedalBoard/pedalBoard.css
+++ b/src/components/pedalBoard/pedalBoard.css
@@ -4,10 +4,10 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   gap: 2rem;
-  position: relative;
   margin-top: 5rem;
+  position: relative;
 }
 
 .pedal-board-components {
@@ -16,7 +16,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
   gap: 2rem;
   padding: 5rem 0;
 }
