--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@300;400&display=swap");
+
 .header {
   height: 50px;
   width: 100%;
@@ -5,32 +7,58 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  position: fixed;
+  z-index: 120;
+  max-width: 1280px;
 }
 
 .header img {
-  height: 100%;
+  height: 80%;
   justify-self: flex-start;
 }
 
-.coffee-button {
-  background-image: url("./cofee.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: max-content;
-  height: 35px;
+.header__logo {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 1rem;
+  margin-right: 1rem;
   cursor: pointer;
 }
 
-@media screen and (max-width: 768px) {
-  .header {
-    justify-content: space-between;
-    padding: 0 1rem;
-  }
+.header__list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  margin-right: 1rem;
+}
 
-  .header img {
-    height: 90%;
-    /* padding-left: 2rem; */
+.header__list-item {
+  list-style: none;
+}
+
+.header__list-item a {
+  font-size: 0.8rem;
+  font-weight: 300;
+  color: rgb(211, 206, 206);
+  margin: 0;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  user-select: none;
+}
+
+.header__list-item:hover {
+  color: white;
+  cursor: pointer;
+}
+
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+  .header {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
   }
 }
