--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .app {
   width: 100%;
-  min-height: 100vh;
+
   background: black;
   display: flex;
   align-items: center;
   flex-direction: column;
+  gap: 1rem;
   background: rgb(19, 17, 28);
   background: linear-gradient(
     24deg,
@@ -22,8 +23,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  height: 100vh;
+
   height: -webkit-fill-available;
   /* padding: 0 2rem; */
   background: black;
