--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -44,11 +44,15 @@
 .header__list-item a {
   font-size: 0.8rem;
   font-weight: 300;
-  color: rgb(211, 206, 206);
+  color: rgb(255, 255, 255);
   margin: 0;
   text-align: center;
   font-family: "Inter", sans-serif;
   user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
 }
 
 .header__list-item:hover {
